@@ -30,6 +30,7 @@
         - Fold all top-level navigation items.
         - Add plugin service to redirect to a certain location.
         - Add support for pagination information to retrieve by plugins.
+        - Buttongroup menus can be opened at different positions.
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
